# PollywigEngine

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENCES.txt  LICENSE
.cache/clangd/index/: 3DSConverter.cpp.1E244FB2F3D42BF0.idx  3DSExporter.cpp.44929B19722E7F47.idx  3DSExporter.h.483210DAA6BCFFF7.idx  3DSHelper.h.35A8FB10C4DF12DF.idx  3DSLoader.cpp.01B30F01DC4BA1DF.idx  3DSLoader.h.FBC20CDE290B1253.idx  3MFTypes.h.F538517F8801815C.idx  3MFXmlTags.h.6F3A826A04E4D37D.idx  ACLoader.cpp.456351CFE93398DF.idx  ACLoader.h.819ECB3543CB96A1.idx  AMFImporter.cpp.7529D98F1E18394A.idx  AMFImporter.hpp.C47EE3F024B0AE57.idx  AMFImporter_Geometry.cpp.0609D5509FE92DBC.idx  AMFImporter_Material.cpp.7512D07C62FB6590.idx  AMFImporter_Node.hpp.7A380C75A903B4B1.idx  AMFImporter_Postprocess.cpp.796DDD7519D41FA3.idx  ASELoader.cpp.A82259E369E69383.idx  ASELoader.h.529CB6811A848CD4.idx  ASEParser.cpp.9D899719D2D81B6D.idx  ASEParser.h.80AC0537EA8EE50B.idx  ArmaturePopulate.cpp.3C11AA169FFC6E64.idx  ArmaturePopulate.h.CB3F1AB41360F6FB.idx  AssbinExporter.cpp.4792CEF50C8C2FC9.idx  AssbinFileWriter.cpp.C906B61A3543BA9A.idx  AssbinFileWriter.h.3B889B99DAD21627.idx  AssbinLoader.cpp.0D1055C80D9A728B.idx  AssbinLoader.h.D25DC82559A46478.idx  AssertHandler.cpp.9D8B0A5CF8FF3A64.idx  AssertHandler.h.593404A4BE374E65.idx  Assimp.cpp.20CE13D4D0574AC5.idx  AssimpCExport.cpp.1F3EFBE303A90D8D.idx  AssxmlExporter.cpp.0B0DD6DBCDEB1F60.idx  AssxmlFileWriter.cpp.E3715E57F13D422E.idx  AssxmlFileWriter.h.E7E4934A65D77C71.idx  B3DImporter.cpp.EE9B67542BB2B920.idx  B3DImporter.h.0AC5895CC9A725E8.idx  BVHLoader.cpp.3AFD963BE7349BDB.idx  BVHLoader.h.6BAC82C8D803DB9E.idx  Base64.cpp.2E8E92EB15645AAD.idx  Base64.hpp.6A4E83C7EB660DA4.idx  (+997 more)
include/: Utilities.h  VulkanRenderer.h
src/: VulkanRenderer.cpp  main.cpp
